// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[reducer/notifications] 1`] = `
Object {
  "shortIDGeneratedStr": undefined,
  "testID": "test",
}
`;

exports[`[reducer/notifications] 2`] = `
Object {
  "shortIDGeneratedStr": undefined,
}
`;
